Connected to service

--- a/TechkidsHotGirl/View Controllers/HotGirlImageCollectionViewCell.xib
+++ b/TechkidsHotGirl/View Controllers/HotGirlImageCollectionViewCell.xib
@@ -20,64 +20,78 @@
                 <rect key="frame" x="0.0" y="0.0" width="400" height="811"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bpJ-Ek-WOX">
-                        <rect key="frame" x="0.0" y="0.0" width="400" height="239.5"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="bpJ-Ek-WOX" secondAttribute="height" multiplier="1100:659" id="S5Y-hm-kSW"/>
-                        </constraints>
-                    </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="JNh-FQ-SMe">
-                        <rect key="frame" x="20" y="259.5" width="360" height="531.5"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PiK-MJ-rUp">
+                        <rect key="frame" x="0.0" y="0.0" width="400" height="811"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="b8f-vI-MUO">
-                                <rect key="frame" x="0.0" y="0.0" width="360" height="60"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bpJ-Ek-WOX">
+                                <rect key="frame" x="0.0" y="0.0" width="400" height="239.5"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="bpJ-Ek-WOX" secondAttribute="height" multiplier="1100:659" id="S5Y-hm-kSW"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="JNh-FQ-SMe">
+                                <rect key="frame" x="20" y="259.5" width="360" height="531.5"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JVX-Gk-6JA">
-                                        <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="JVX-Gk-6JA" secondAttribute="height" id="MgN-mI-B1Z"/>
-                                            <constraint firstAttribute="height" constant="60" id="YaX-Mp-vCQ"/>
-                                        </constraints>
-                                    </imageView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="7Jd-0l-ons">
-                                        <rect key="frame" x="80" y="0.0" width="280" height="60"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="b8f-vI-MUO">
+                                        <rect key="frame" x="0.0" y="0.0" width="360" height="60"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cLi-lJ-e8v">
-                                                <rect key="frame" x="0.0" y="0.0" width="280" height="32.5"/>
-                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lUG-av-L74">
-                                                <rect key="frame" x="0.0" y="32.5" width="280" height="27.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JVX-Gk-6JA">
+                                                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="JVX-Gk-6JA" secondAttribute="height" id="MgN-mI-B1Z"/>
+                                                    <constraint firstAttribute="height" constant="60" id="YaX-Mp-vCQ"/>
+                                                </constraints>
+                                            </imageView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="7Jd-0l-ons">
+                                                <rect key="frame" x="80" y="0.0" width="280" height="60"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cLi-lJ-e8v">
+                                                        <rect key="frame" x="0.0" y="0.0" width="280" height="32.5"/>
+                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lUG-av-L74">
+                                                        <rect key="frame" x="0.0" y="32.5" width="280" height="27.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
                                         </subviews>
                                     </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LeM-ot-8hW">
+                                        <rect key="frame" x="0.0" y="80" width="360" height="451.5"/>
+                                        <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Videsne, ut haec concinant? Contemnit enim disserendi elegantiam, confuse loquitur. Aliter enim explicari, quod quaeritur, non potest. Duo Reges: constructio interrete. Nonne igitur tibi videntur, inquit, mala? Quid ait Aristoteles reliquique Platonis alumni? Quid ei reliquisti, nisi te, quoquo modo loqueretur, intellegere, quid diceret? Hinc ceteri particulas arripere conati suam quisque videro voluit afferre sententiam. Ut enim consuetudo loquitur, id solum dicitur honestum, quod est populari fama gloriosum.</string>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LeM-ot-8hW">
-                                <rect key="frame" x="0.0" y="60" width="360" height="471.5"/>
-                                <mutableString key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Videsne, ut haec concinant? Contemnit enim disserendi elegantiam, confuse loquitur. Aliter enim explicari, quod quaeritur, non potest. Duo Reges: constructio interrete. Nonne igitur tibi videntur, inquit, mala? Quid ait Aristoteles reliquique Platonis alumni? Quid ei reliquisti, nisi te, quoquo modo loqueretur, intellegere, quid diceret? Hinc ceteri particulas arripere conati suam quisque videro voluit afferre sententiam. Ut enim consuetudo loquitur, id solum dicitur honestum, quod est populari fama gloriosum.</mutableString>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
-                    </stackView>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="bpJ-Ek-WOX" firstAttribute="top" secondItem="PiK-MJ-rUp" secondAttribute="top" id="8VY-Kn-cWw"/>
+                            <constraint firstAttribute="trailing" secondItem="JNh-FQ-SMe" secondAttribute="trailing" constant="20" id="Kea-mc-Bv9"/>
+                            <constraint firstItem="JNh-FQ-SMe" firstAttribute="leading" secondItem="PiK-MJ-rUp" secondAttribute="leading" constant="20" id="QaB-GK-b6Q"/>
+                            <constraint firstItem="bpJ-Ek-WOX" firstAttribute="leading" secondItem="PiK-MJ-rUp" secondAttribute="leading" id="S5y-yT-L9y"/>
+                            <constraint firstAttribute="bottom" secondItem="JNh-FQ-SMe" secondAttribute="bottom" constant="20" id="Uvs-gU-i9z"/>
+                            <constraint firstAttribute="trailing" secondItem="bpJ-Ek-WOX" secondAttribute="trailing" id="YfC-BU-sWQ"/>
+                            <constraint firstAttribute="width" constant="400" id="rEa-BR-2sJ"/>
+                            <constraint firstItem="JNh-FQ-SMe" firstAttribute="top" secondItem="bpJ-Ek-WOX" secondAttribute="bottom" constant="20" id="sNo-gY-FpU"/>
+                        </constraints>
+                    </view>
                 </subviews>
             </view>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="bpJ-Ek-WOX" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="15z-ZG-EYC"/>
-                <constraint firstItem="JNh-FQ-SMe" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="1dj-VY-BsE"/>
-                <constraint firstItem="bpJ-Ek-WOX" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="8a0-Fd-qk9"/>
-                <constraint firstItem="ZTg-uK-7eu" firstAttribute="bottom" secondItem="JNh-FQ-SMe" secondAttribute="bottom" constant="20" id="Hmb-8b-prT"/>
-                <constraint firstAttribute="trailing" secondItem="bpJ-Ek-WOX" secondAttribute="trailing" id="oFK-jf-9pA"/>
-                <constraint firstItem="JNh-FQ-SMe" firstAttribute="top" secondItem="bpJ-Ek-WOX" secondAttribute="bottom" constant="20" id="tHt-cE-lLB"/>
-                <constraint firstAttribute="trailing" secondItem="JNh-FQ-SMe" secondAttribute="trailing" constant="20" id="yJF-DB-nGX"/>
+                <constraint firstAttribute="bottom" secondItem="PiK-MJ-rUp" secondAttribute="bottom" id="8EI-hP-5hO"/>
+                <constraint firstItem="PiK-MJ-rUp" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="QRj-24-xwB"/>
+                <constraint firstItem="PiK-MJ-rUp" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="f9e-G1-Urv"/>
+                <constraint firstAttribute="trailing" secondItem="PiK-MJ-rUp" secondAttribute="trailing" id="qmS-kJ-Lty"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="1100" height="1622"/>
@@ -86,6 +100,7 @@
                 <outlet property="userImageView" destination="JVX-Gk-6JA" id="t78-Fn-pSE"/>
                 <outlet property="userNameLabel" destination="cLi-lJ-e8v" id="iS7-V8-fEF"/>
                 <outlet property="userTitleLabel" destination="lUG-av-L74" id="ioN-oE-COZ"/>
+                <outlet property="widthConstraint" destination="rEa-BR-2sJ" id="VIu-Jj-UjT"/>
             </connections>
             <point key="canvasLocation" x="874" y="737.5"/>
         </collectionViewCell>
